<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="373dp"
            android:layout_height="466dp"
            android:layout_margin="@dimen/default_padding"
            app:layout_constraintBottom_toTopOf="@+id/roll_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.recyclerview.widget.RecyclerView>

        <ImageView
            android:id="@+id/left_dice_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/left_dice_description"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.24000001"
            app:srcCompat="@drawable/empty_dice"
            tools:srcCompat="@drawable/dice_1" />

        <ImageView
            android:id="@+id/right_dice_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/right_dice_description"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/left_dice_image"
            app:layout_constraintTop_toTopOf="@id/left_dice_image"
            app:srcCompat="@drawable/empty_dice"
            tools:srcCompat="@drawable/dice_1" />


        <Button
            android:id="@+id/roll_button"
            android:layout_width="112dp"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/roll_label"
            app:layout_constraintEnd_toStartOf="@+id/reset_button"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toEndOf="@+id/count_up_button"
            app:layout_constraintTop_toTopOf="@+id/count_up_button" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="112dp"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/roll_button" />

        <Button
            android:id="@+id/count_up_button"
            android:layout_width="112dp"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:text="@string/count_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/left_dice_image"
            app:layout_constraintVertical_bias="0.81" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>